manifests/fitness/wger/wger-celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger-celery-beat
  namespace: fitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger-celery-beat
  template:
    metadata:
      labels:
        app: wger-celery-beat
    spec:
      nodeSelector:
        kubernetes.io/hostname: homeserver
      securityContext:
        fsGroup: 1000
      containers:
        - name: celery-beat
          image: wger/server:latest
          command:
            - /start-beat
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
