manifests/fitness/wger/wger-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger-nginx
  namespace: fitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger-nginx
  template:
    metadata:
      labels:
        app: wger-nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: homeserver
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: static-storage
              mountPath: /wger/static
              readOnly: true
            - name: media-storage
              mountPath: /wger/media
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: wger-nginx-config
        - name: static-storage
          persistentVolumeClaim:
            claimName: wger-static-pvc
        - name: media-storage
          persistentVolumeClaim:
            claimName: wger-media-pvc
