manifests/fitness/wger/wger-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-cache-service
  namespace: fitness
spec:
  selector:
    app: wger-cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
