manifests/fitness/wger/wger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-service
  namespace: fitness
spec:
  type: ClusterIP
  selector:
    app: wger-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
