manifests/fitness/wger/wger-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-web-service
  namespace: fitness
spec:
  selector:
    app: wger-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
