manifests/fitness/wger/wger-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wger-ingressroute
  namespace: fitness
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wger.janikhenz.ch`)
      kind: Rule
      services:
        - name: wger-service
          port: 80
